# ContractIQ-v2

./: .gitignore  README.md
.claude/skills/clause-taxonomy/: SKILL.md
.claude/skills/contract-analysis/: SKILL.md
.claude/skills/contract-analysis/references/: clause-types.md  jurisdiction-notes.md  risk-indicators.md
.claude/skills/missing-clauses/: SKILL.md
.claude/skills/risk-scoring/: SKILL.md
.github/workflows/: codspeed.yml  deploy.yml
assets/: workspace-reports-44ddf24d.csv
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  alembic.ini  cloudrun-api.yaml  cloudrun-worker.yaml  fly.toml  pyproject.toml  worker_entrypoint.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_document_cleanup.py  003_agent_audit_log.py
backend/scripts/: seed_user.py
backend/src/: main.py
backend/src/agents/: clause_extraction_agent.py  contract_agent.py  rag_agent.py  review_agent.py
backend/src/api/: auth.py  clauses.py  conversations.py  documents.py  workspaces.py
backend/src/core/: audit.py  auth.py  config.py  database.py  rate_limit.py
backend/src/models/: __init__.py  agent_audit_log.py  audit_log.py  clause.py  conversation.py  document.py  document_chunk.py  user.py  workspace.py
backend/src/services/: document_processor.py  files_api.py  gcs_service.py  pii_redactor.py  playbook_service.py  vector_store.py  workspace_tools.py
backend/src/workers/: document_worker.py
backend/tests/: test_benchmarks.py
docs/: design-brief.md  screens-design-doc.md
docs/plans/: 2026-03-29-autonomous-agent-architecture.md  2026-03-29-contractiq-v2.md  2026-03-29-expert-review-synthesis.md  2026-03-29-frontend.md
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/auth/: form-field.tsx  product-preview-panel.tsx
frontend/src/components/dashboard/: document-card.tsx  empty-state.tsx
frontend/src/components/documents/: document-grid.tsx  document-row.tsx  filter-bar.tsx
frontend/src/components/layout/: page-header.tsx  sidebar.tsx
frontend/src/components/marketing/: cta-section.tsx  features.tsx  footer.tsx  hero.tsx  nav.tsx  (+2 more)
frontend/src/hooks/: use-document-detail.ts  use-documents.ts  use-upload.ts  use-workspace.ts
frontend/src/lib/: auth.ts  tokens.css
scripts/: provision-gcp.sh
(+27 files in other folders)
