[project]
name = "contractiq-v2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.52",
    "pymupdf>=1.24.0",
    "python-docx",
    "voyageai",
    "pgvector>=0.3.0",
    "asyncpg",
    "arq",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "pydantic-settings",
    "email-validator",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]",
    "bcrypt<4.0",
    "python-multipart",
    "redis[hiredis]",
    "aioredis",
    "sse-starlette",
    "httpx",
    "slowapi",
    "python-magic",
    "google-cloud-storage",
    "rapidfuzz>=3.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest-codspeed>=4.3.0",
]
